major changes for tracking progress.

--- a/ASDCoursework2/ASDCoursework2.vcxproj.filters
+++ b/ASDCoursework2/ASDCoursework2.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="DataStore.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CategoryExpenseSummary.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Transaction.h">
@@ -42,6 +45,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="DataStore.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CategoryExpenseSummary.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
