--- a/ASDCoursework2/ASDCoursework2.vcxproj
+++ b/ASDCoursework2/ASDCoursework2.vcxproj
@@ -141,12 +141,14 @@
   <ItemGroup>
     <ClCompile Include="ASDCoursework2.cpp" />
     <ClCompile Include="Category.cpp" />
+    <ClCompile Include="CategoryExpenseSummary.cpp" />
     <ClCompile Include="DataStore.cpp" />
     <ClCompile Include="Program.cpp" />
     <ClCompile Include="Transaction.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Category.h" />
+    <ClInclude Include="CategoryExpenseSummary.h" />
     <ClInclude Include="DataStore.h" />
     <ClInclude Include="Program.h" />
     <ClInclude Include="Transaction.h" />
