--- a/ASDCoursework2/ASDCoursework2.vcxproj.filters
+++ b/ASDCoursework2/ASDCoursework2.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="CategoryExpenseSummary.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="BudgetService.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Transaction.h">
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="CategoryExpenseSummary.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BudgetService.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
