--- a/ASDCoursework2/ASDCoursework2.vcxproj
+++ b/ASDCoursework2/ASDCoursework2.vcxproj
@@ -150,9 +150,9 @@
   <ItemGroup>
     <ClInclude Include="BudgetService.h" />
     <ClInclude Include="Category.h" />
-    <ClInclude Include="CategoryExpenseSummary.h" />
-    <ClInclude Include="DataStore.h" />
-    <ClInclude Include="Program.h" />
+    <ClInclude Include="ExpenseBudgetDetail.h" />
+    <ClInclude Include="Database.h" />
+    <ClInclude Include="ExpenseTracker.h" />
     <ClInclude Include="Transaction.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
